--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,15 @@ html,
 body {
   max-width: 100vw;
 }
+
+/*
+short term solution for 
+cloudinary loader breaking page 
+when there is a network issue and
+it can't fetch image
+*/
+@media (max-width: 768px) {
+  img {
+    width: 100%;
+  }
+}
